--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: Student-Blog
+description: "Blog of a Computer Science Student"
 author:
   name: "Fırat"
   email: "firatolcay1999@gmail.com"
