--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Student-Blog
-description: "Blog of a Computer Science Student"
+title: Fırat Fuat Olcay
+description: "A blog about computer science concepts and trends"
 author:
   name: "Fırat"
   email: "firatolcay1999@gmail.com"
@@ -29,4 +29,4 @@ plugins:
 
 # Custom variables
 owner : "Firat Fuat Olcay"
-year : "2019"
+year : "2022"
